# storage/api-docs/api-docs.json
@@ -457,31 +457,12 @@
             }
         },
         "/likes": {
-            "get": {
-                "tags": [
-                    "Лайки"
-                ],
-                "summary": "Get list of likes",
-                "description": "Returns list of likes",
-                "operationId": "getLikesList",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            },
             "post": {
                 "tags": [
                     "Лайки"
                 ],
-                "summary": "Store new like",
-                "description": "Returns like data",
+                "summary": "Поставить лайк",
+                "description": "Возвращает информацию о лайке",
                 "operationId": "storeLikes",
                 "responses": {
                     "201": {
@@ -500,81 +481,12 @@
             }
         },
         "/likes/{id}": {
-            "get": {
-                "tags": [
-                    "Лайки"
-                ],
-                "summary": "Get like information",
-                "description": "Returns like data",
-                "operationId": "getLikeById",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Like id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "Лайки"
-                ],
-                "summary": "Update existing like",
-                "description": "Returns updated like data",
-                "operationId": "updateLike",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Like id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            },
             "delete": {
                 "tags": [
                     "Лайки"
                 ],
-                "summary": "Delete existing like",
-                "description": "Deletes a record and returns no content",
+                "summary": "Удаление существующего лайка",
+                "description": "Возвращает удаленный лайк",
                 "operationId": "deleteLike",
                 "parameters": [
                     {
@@ -1044,33 +956,14 @@
                 }
             }
         },
-        "/subscribes": {
-            "get": {
-                "tags": [
-                    "Подписки"
-                ],
-                "summary": "Get list of subscribes",
-                "description": "Returns list of subscribes",
-                "operationId": "getSubscribesList",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            },
+        "/subscribes/group/{id}": {
             "post": {
                 "tags": [
                     "Подписки"
                 ],
-                "summary": "Store new subscribes",
-                "description": "Returns subscribes data",
-                "operationId": "storeSubscribes",
+                "summary": "Подписка пользователя на группу",
+                "description": "Возвращает данные о подписке",
+                "operationId": "storeSubscribesGroups",
                 "responses": {
                     "201": {
                         "description": "Successful operation"
@@ -1092,8 +985,8 @@
                 "tags": [
                     "Подписки"
                 ],
-                "summary": "Get subscribes information",
-                "description": "Returns subscribes data",
+                "summary": "Получение информации о подписке",
+                "description": "Возвращает информацию о подписке",
                 "operationId": "getSubscribesById",
                 "parameters": [
                     {
@@ -1121,48 +1014,12 @@
                     }
                 }
             },
-            "put": {
-                "tags": [
-                    "Подписки"
-                ],
-                "summary": "Update existing subscribes",
-                "description": "Returns updated subscribes data",
-                "operationId": "updateSubscribes",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Subscribes id",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "202": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Resource Not Found"
-                    }
-                }
-            },
             "delete": {
                 "tags": [
                     "Подписки"
                 ],
-                "summary": "Delete existing subscribes",
-                "description": "Deletes a record and returns no content",
+                "summary": "Удаление существующей подписки",
+                "description": "Удаление существующей подписки",
                 "operationId": "deleteSubscribes",
                 "parameters": [
                     {
